style.css
:root {
    --bg: white;
    --card: aliceblue;
    --text: black;
    --border: black;
    --hover: rgb(209, 231, 250);
    --shadow: rgba(0, 0, 0, 0.2);

    --button-bg: #f5f5f5;
    --button-text: black;
    --button-border: #bbb;
}

html.dark {
    --bg: #121212;
    --card: #1e1e1e;
    --text: white;
    --border: white;
    --hover: #333;
    --shadow: rgba(255, 255, 255, 0.15);

    --button-bg: #2b2b2b;
    --button-text: white;
    --button-border: #666;
}

body
{
    margin:0;
    margin-left:4px;
    background: var(--bg);
}

#title-bar, #filter-bar
{
  margin: 0px 10px;
  color: var(--text);
  border-bottom: 1px solid var(--border);
  margin-bottom: 10px;

  display: flex;
  justify-content: space-between;
  align-items: center;
}

#filter-bar
{
  padding-bottom: 10px;
}

.delete-btn, #title-btns button
{

  padding: 10px 18px;
  border-radius: 8px;
  border: 1px solid var(--button-border);

  background: var(--button-bg);
  color: var(--button-text);

  cursor: pointer;
  transition: 0.3s;
}

.delete-btn:hover, #title-btns button:hover
{
  transform: scale(1.05);
  box-shadow: 0 0 8px var(--button-border);
}

.hero
{
  display:flex;
  gap:20px;
  flex-wrap:wrap;
}

.card
{
  background-color: var(--card);
  color: var(--text);
  display:flex;
  flex-direction: column;
  height:350px;
  width:250px;
  border-radius: 10px;
  align-items:center;
  box-sizing: border-box;
  padding: 0 20px;
}

.card:hover
{
  cursor: pointer;
  box-shadow: 0 0 10px var(--shadow);
}

/* Flip Logic Start */

.card-inner
{
  position: relative;
  height: 100%;
  width: 100%;
  transform-style: preserve-3d;
  transition: transform 0.5s;
}

.card.flipped .card-inner
{
  transform: rotateY(180deg);
}

.card-front,.card-back
{
  overflow: auto;
  position: absolute;
  inset:0;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  backface-visibility: hidden;
}

.card-back
{
  transform: rotateY(180deg);
}

/* Flip Logic End */

/* Form Logic Start */
#form-container
{
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: fixed;
  inset:0;
  z-index:9999;
  background-color: rgba(0,0,0,0.5);
}

#form-container.hidden
{
  display: none;
}

form
{
  text-align:center;
  width: 300px;
  height: 350px;
  border-radius: 10px;

  display: flex;
  flex-direction: column;
  gap:15px;

  background: var(--card);
  color:var(--text);
  box-shadow: 0 0 20px var(--shadow);
  padding:25px;
}
/* Form Logic End */

